# ofx

./: Cargo.toml  LICENSE
.devcontainer/: devcontainer.json
src/: de.rs  error.rs  lib.rs  models.rs  ofx.rs  ofx_header.rs  parse.rs  parsers.rs
src/de/: sgml.rs
src/de/sgml/: map.rs  seq.rs  sum.rs
src/models/: ofx_header.rs  ofx_response.rs
src/ofx/: header.rs  response.rs
src/parse/: sgml.rs
src/parse/sgml/: element.rs  header.rs
src/parsers/: sgml.rs
src/parsers/sgml/: element.rs  ofx_header.rs  ofx_response.rs
src/test_data/v102/: empy.ofx
tests/: main.rs
tests/data/v102/: signon_response.ofx
