[package]
name = "ofx-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
serde = { version = "1.0.160", features = ["derive"] }
serde-enum-str = "0.3.2"
thiserror = "1.0.40"

[dev-dependencies]
test-case = "3.1.0"
