[package]
name = "ofx-parse"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"
time = { version = "0.3.28", features = ["parsing", "serde"] }

[dev-dependencies]
test-case = "3.1.0"
time = { version = "0.3.28", features = ["macros"] }
